# GenBit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .env.example  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1c2d3e4f5b6_add_stop_codon_element_type.py
backend/app/: config.py  dependencies.py  main.py
backend/app/clients/: base_client.py  cocoputs_client.py  ensembl_client.py  epd_client.py  jaspar_client.py  ncbi_client.py  uniprot_client.py
backend/app/models/: __init__.py  codon_table.py  construct.py  construct_element.py  optimization_job.py  organism.py  project.py
backend/app/routers/: constructs.py  genes.py  health.py  optimization.py  organisms.py  projects.py  proteins.py  regulatory.py
backend/app/schemas/: common.py  construct.py  gene.py  optimization.py  organism.py  project.py  protein.py  regulatory.py
backend/app/services/: cache_service.py  codon_optimization_service.py  construct_assembly_service.py  construct_service.py  genbank_export_service.py  gene_service.py  kozak_service.py  organism_service.py  project_service.py  promoter_service.py  protein_service.py  restriction_digest_service.py
backend/app/utils/: codon_tables.py  fasta.py  pagination.py  sequence.py
backend/data/: kozak_sequences.csv  promoters.csv
backend/tests/: test_health.py
backend/tests/routers/: test_constructs_digest.py  test_constructs_export.py  test_genes.py  test_optimization.py
backend/tests/services/: test_codon_optimization.py  test_kozak.py  (+3 more)
(+77 files in other folders)
